syntax = "proto3";

service ProductService {
  rpc GetProductDetails (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  int32 productId = 1;
}

message ProductResponse {
  string productDetails = 1;
}
